--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "SmtpPort": 587,
     "SenderEmail": "hasanmonsur2020@gmail.com",
     "SenderName": "Hasan Monsur",
-    "SenderPassword": "gpds gqvu exov bktx"
+    "SenderPassword": "g..."
   },
   "AllowedHosts": "*"
 }
